# endure

./: .env.example  .gitignore  Dockerfile  PLAN.md  THESIS_PLAN.md  conftest.py  docker-compose.evaluate.yml  docker-compose.yml  pyproject.toml
.claude/: settings.json
.claude/worktrees/agent-aceea31c94cf28012/: .gitignore  conftest.py  manage.py  pyproject.toml
.claude/worktrees/agent-aceea31c94cf28012/endure/: test_settings.py
.claude/worktrees/agent-aceea31c94cf28012/src/: models.py
.claude/worktrees/agent-aceea31c94cf28012/src/migrations/: 0004_remove_tenant_priority_boost.py  0008_sourcefile.py
.claude/worktrees/agent-aceea31c94cf28012/src/reporting/: storage.py
.claude/worktrees/agent-aceea31c94cf28012/src/reporting/generators/: csv_data.py  excel.py
.claude/worktrees/agent-aceea31c94cf28012/src/reporting/jobs/: daily_import.py
.claude/worktrees/agent-aceea31c94cf28012/src/tests/: test_csv_data.py  test_daily_import.py  test_excel.py  test_storage.py
.claude/worktrees/manual-unit1/: pyproject.toml
.claude/worktrees/manual-unit1/src/: admin.py
.claude/worktrees/manual-unit1/src/framework/: pipeline.py
endure/: __init__.py  settings.py  test_settings.py
files (2)/: INTEGRATION.md  PATCHES.md
loadtest-results/e4/: drain_w1_20260611T174858Z.csv  drain_w1_20260611T174933Z.csv  drain_w2_20260611T175121Z.csv  drain_w2_20260611T175145Z.csv  drain_w4_20260611T175329Z.csv  drain_w4_20260611T175345Z.csv  summary.csv  w1_20260611T175007Z.csv  w2_20260611T175203Z.csv  w4_20260611T175401Z.csv
loadtest-results/e4_prefix_buggy-counters/: drain_w1_20260611T164152Z.csv  drain_w1_20260611T164223Z.csv  drain_w2_20260611T164406Z.csv  drain_w2_20260611T165517Z.csv  w1_20260611T164253Z.csv  w2_20260611T170628Z.csv
loadtest-results/e4a/: drain_w1_20260611T173508Z.csv  drain_w2_20260611T174010Z.csv  drain_w4_20260611T174339Z.csv  drain_w8_20260611T174600Z.csv  sleep_w1_20260611T173508Z.csv  sleep_w2_20260611T174010Z.csv  sleep_w4_20260611T174339Z.csv  sleep_w8_20260611T174600Z.csv  summary.csv
loadtest-results/e4a_bonus_inflight4/: drain_w2_20260611T180030Z.csv  sleep_w2_20260611T180030Z.csv
loadtest-results/e4a_prefix_buggy-counters/: drain_w1_20260611T162940Z.csv  drain_w2_20260611T163446Z.csv  drain_w4_20260611T163702Z.csv  drain_w8_20260611T163905Z.csv  sleep_w1_20260611T162940Z.csv  sleep_w2_20260611T163446Z.csv  sleep_w4_20260611T163702Z.csv  sleep_w8_20260611T163905Z.csv
loadtest-results/e5/: 20260611T175726Z.csv
loadtest-results/logs/: 00_env.txt  01_tier1.txt  01b_tier1_postfix.txt  02_stack.txt  02b_runner_fix.txt  02c_api_smoke.txt  02d_worker_imports.txt  03_worker_kill.txt  04_leader_kill.txt  05_sleep_w1.txt  05_sleep_w2.txt  05_sleep_w4.txt  05_sleep_w8.txt  05b_sleep_w2_inflight4.txt  06_e4b.txt  06_starvation_forensics.txt  07_e5.txt  (+2 more)
src/: admin.py  constants.py  models.py
(+171 files in other folders)
