[project]
name = "endure"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "croniter>=6.2.2",
    "django>=6.0.5",
    "openpyxl>=3.1",
    "django-environ>=0.13.0",
    "django-ninja>=1.6.2",
    "psycopg[binary]>=3.3.4",
    "pydantic-settings>=2.14.1",
    "ruff>=0.15.14",
    "uvicorn[standard]>=0.34.0",
]

[tool.mypy]
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "endure.settings"

[dependency-groups]
dev = [
    "django-stubs[compatible-mypy]>=6.0.5",
    "httpx>=0.27",
    "locust>=2.32",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-django>=4.10",
    "pytest-sugar>=1.0",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "endure.test_settings"
asyncio_mode = "auto"
testpaths = ["src/tests", "src/evaluate"]
markers = [
    "integration: requires real DB and filesystem",
    "e2e: requires running Docker Compose stack (api, scheduler, workers)",
    "chaos: kills containers; set ENDURE_CHAOS=1 to enable",
    "evaluate: evaluation chapter tests",
    "live: requires the full docker compose stack",
    "demonstration: legacy marker, may be removed with the old suite",
]
