[project]
name = "endure"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0.5",
    "django-environ>=0.13.0",
    "django-ninja>=1.6.2",
    "psycopg[binary]>=3.3.4",
    "pydantic-settings>=2.14.1",
    "redis[hiredis]>=8.0.0",
    "ruff>=0.15.14",
]

[tool.mypy]
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "endure.settings"

[dependency-groups]
dev = [
    "django-stubs[compatible-mypy]>=6.0.5",
]
